<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetbyVideo</string>
    <string name="usb1">USB1</string>
    <string name="usb2">USB2</string>
        <string name="sdcard1">SD1</string>
    <string name="sdcard2">SD2</string>
    <string name="defaultusb">默认</string>
    <string name="time_default">00.00</string>
    <string name="time_spilt">/</string>

</resources>